--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
+@font-face {
+    font-family: 'zabras';
+    src: url('fonts/Zabars.ttf') format('truetype');
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url('img/desert.png');
+    background-position: center;
+    font-family: 'zabras', Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    font-size: 64px;
+    letter-spacing: 3px;
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .d-none {
@@ -35,7 +49,7 @@ canvas {
 
 .start-game-container {
     position: absolute;
-    top: 41%;
+    top: 50%;
     z-index: 2;
 }
 
