--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     background-image: url('img/desert.png');
     background-position: center;
     font-family: 'zabras', Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -24,6 +25,7 @@ h1 {
 
 canvas {
     background-color: black;
+    display: block;
 }
 
 .canvas-container {
@@ -62,4 +64,20 @@ canvas {
     background-color: red;
     cursor: pointer;
     font-size: 24px;
+}
+
+@media only screen and (max-width: 720px){
+    canvas {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 480px){
+    canvas {
+        height: 100vh;
+    }
+
+    h1 {
+        display: none;
+    }
 }
