--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
     margin: 0;
 }
 
+.main.container {
+    width: 720px;
+    height: 480px;
+}
+
 .start-screen {
     position: absolute;
     display: flex;
@@ -25,7 +30,6 @@ body {
 .start-screen img {
     width: 720px;
     height: 480px;
-    display: block;
 }
 
 h1 {
@@ -41,7 +45,6 @@ h1 {
 canvas {
     background-color: black;
     display: block;
-    cursor: pointer;
 }
 
 .canvas-container {
