--- a/style.css
+++ b/style.css
@@ -19,17 +19,14 @@ body {
 }
 
 .start-screen {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    top: 150px;
-    z-index: 5;
-    height: 100%;
+    width: 720px;
+    height: 480px;
 }
 
 .start-screen img {
-    width: 720px;
-    height: 480px;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
@@ -71,8 +68,12 @@ canvas {
 
 .start-game-container {
     position: absolute;
-    top: 50%;
-    z-index: 5;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    align-items: center;
+    justify-content: center;
 }
 
 .start-game-button {
@@ -95,9 +96,9 @@ canvas {
     display: flex;
     width: 720px;
     justify-content: space-between;
-    z-index: 4;
-    position: absolute;
-    top: 566px;
+    z-index: 1;
+    position: relative;
+    bottom: 65px;
 }
 
 .touch-icons-main-container img {
@@ -176,6 +177,26 @@ canvas {
     canvas {
         width: 100%;
     }
+
+    .touch-icon-container {
+        width: 40%;
+    }
+
+    .ouch-icons-main-container {
+        display:initial;
+    }
+
+    .start-screen {
+        width: 100%;
+    }
+
+    .loading-screen-container {
+        width: 100%;
+    }
+
+    .touch-icons-main-container {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-height: 480px){
@@ -185,5 +206,27 @@ canvas {
 
     h1 {
         display: none;
+    }
+
+    .start-screen {
+        height: 100vh;
+    }
+
+    .loading-screen-container {
+        height: 100vh;
+        position: absolute;
+        top: 0;
+    }
+
+    .touch-icons-main-container {
+        top: auto;
+        width: 100%;
+        position: relative;
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .canvas-container {
+        height: 100vh;
     }
 }
