--- a/style.css
+++ b/style.css
@@ -13,22 +13,6 @@ body {
     margin: 0;
 }
 
-.main.container {
-    width: 720px;
-    height: 480px;
-}
-
-.start-screen {
-    width: 720px;
-    height: 480px;
-}
-
-.start-screen img {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-}
-
 h1 {
     font-size: 64px;
     letter-spacing: 3px;
@@ -39,94 +23,64 @@ h1 {
     display: none !important;
 }
 
+.canvas-container {
+    width: 720px;
+    height: 480px;
+    display: block;
+    position: relative;
+}
+
 canvas {
     background-color: black;
     display: block;
 }
 
-.canvas-container {
-    z-index: 1;
-    display: block;
-}
-
-.replay-button-container {
+.start-screen {
     position: absolute;
-    top: 54%;
-    z-index: 2;
-}
-
-.replay-button {
-    height: 40px;
-    width: 90px;
-    color: yellow;
-    border: 0;
-    border-radius: 3px;
-    background-color: red;
-    cursor: pointer;
-    font-size: 24px;
-}
-
-.start-game-container {
-    position: absolute;
-    display: flex;
-    height: 100%;
-    width: 100%;
+    top: 0px;
     z-index: 3;
-    align-items: center;
-    justify-content: center;
 }
 
-.start-game-button {
-    height: 65px;
-    width: 125px;
-    color: black;
-    border: 0;
-    border-radius: 50px;
-    background-color: blue;
-    cursor: pointer;
-    font-size: 24px;
-    box-shadow: 1px 1px 1px 1px;
-}
-
-.start-game-button:hover {
-    background-color: green;
+.start-screen img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .touch-icons-main-container {
-    display: flex;
-    width: 720px;
-    justify-content: space-between;
     z-index: 1;
     position: relative;
-    bottom: 65px;
-}
-
-.touch-icons-main-container img {
-    height: 50px;
-    width: 50px;
+    bottom: 75px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .touch-icon-container {
     display: flex;
-    width: 200px;
     justify-content: space-around;
+    width: 35%;
 }
 
-.loading-screen-container {
-    background-color: black;
-    width: 720px;
-    height: 480px;
+.touch-icon-container img {
+    height: 70px;
+    width: 70px;
+}
+
+.loading-screen {
     position: absolute;
-    z-index: 7;
-    top: 147px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    z-index: 2;
 }
 
 .center{
-    height: 100%;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
+    min-height: 100%;
   }
   .ring{
     position: absolute;
@@ -177,24 +131,20 @@ canvas {
     canvas {
         width: 100%;
     }
-
-    .touch-icon-container {
-        width: 40%;
+    
+    .canvas-container {
+        width: 100%;
     }
 
-    .ouch-icons-main-container {
-        display:initial;
+    .touch-icons-main-container {
+        width: 100%;
     }
 
     .start-screen {
         width: 100%;
     }
 
-    .loading-screen-container {
-        width: 100%;
-    }
-
-    .touch-icons-main-container {
+    .loading-screen {
         width: 100%;
     }
 }
@@ -204,29 +154,16 @@ canvas {
         height: 100vh;
     }
 
-    h1 {
-        display: none;
-    }
-
-    .start-screen {
-        height: 100vh;
-    }
-
-    .loading-screen-container {
-        height: 100vh;
-        position: absolute;
-        top: 0;
-    }
-
-    .touch-icons-main-container {
-        top: auto;
-        width: 100%;
-        position: relative;
-        display: flex;
-        align-items: flex-end;
-    }
-
     .canvas-container {
         height: 100vh;
+        width: fit-content;
+    }
+
+    .loading-screen {
+        height: 100vh;
+    }
+
+    h1 {
+        display: none;
     }
 }
