--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('img/desert.png');
+    background-image: url('img/background/desert.png');
     background-position: center;
     font-family: 'zabras', Arial, Helvetica, sans-serif;
     margin: 0;
@@ -42,7 +42,6 @@ canvas {
 }
 
 .start-screen img {
-    object-fit: contain;
     width: 100%;
     height: 100%;
 }
@@ -125,7 +124,76 @@ canvas {
     50%{
       color: black;
     }
-  }
+}
+
+.arrow {
+    height: 50px;
+    width: 50px;
+}
+
+.play-button {
+    position: absolute;
+    z-index: 6;
+    cursor: pointer;
+    right: 10px;
+    top: 10px;
+}
+
+.sound-on-button {
+    position: absolute;
+    z-index: 6;
+    cursor: pointer;
+    right: 80px;
+    top: 10px;
+}
+
+.sound-off-button {
+    position: absolute;
+    z-index: 6;
+    cursor: pointer;
+    right: 80px;
+    top: 10px;
+}
+
+.controller {
+    position: absolute;
+    z-index: 6;
+    cursor: pointer;
+    right: 150px;
+    top: 10px;  
+}
+
+.controller-info {
+    position: absolute;
+    z-index: 6;
+    bottom: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.start-game-container {
+    position: absolute;
+    top: 55px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 3;
+}
+
+.start-game-button {
+    width: 100px;
+    height: 30px;
+    border-radius: 30px;
+    border: 0px;
+    background-color: green;
+    cursor: pointer;
+}
+
+.start-game-button:hover {
+    background-color: rgb(0, 180, 0);
+    box-shadow: 1px 1px 1px 1px rgb(31, 31, 31);
+}
 
 @media only screen and (max-width: 720px){
     canvas {
