--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     align-items: center;
     background-image: url('img/background/desert.png');
     background-position: center;
+    height: 100vh;
     font-family: 'zabras', Arial, Helvetica, sans-serif;
     margin: 0;
 }
@@ -33,6 +34,11 @@ h1 {
 canvas {
     background-color: black;
     display: block;
+}
+
+.canvas-container-main {
+    display: flex;
+    justify-content: center;
 }
 
 .start-screen {
@@ -175,63 +181,24 @@ canvas {
 
 .start-game-container {
     position: absolute;
-    top: 55px;
+    top: 45px;
     width: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 40px;
     justify-content: center;
     z-index: 3;
+}
+
+.start-game-container img {
+    cursor: pointer;
 }
 
 
 .start-game-button:hover {
     background-color: rgb(0, 180, 0);
     box-shadow: 1px 1px 1px 1px rgb(31, 31, 31);
-}
-
-
-.button-30 {
-  align-items: center;
-  appearance: none;
-  background-color: #FCFCFD;
-  border-radius: 4px;
-  border-width: 0;
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #36395A;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 18px;
-}
-
-.button-30:focus {
-  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-}
-
-.button-30:hover {
-  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-30:active {
-  box-shadow: #D6D6E7 0 3px 7px inset;
-  transform: translateY(2px);
 }
 
 @media only screen and (max-width: 720px){
@@ -333,5 +300,17 @@ canvas {
 
     h1 {
         display: none;
+    }
+
+    .touch-icons-main-container {
+        z-index: 1;
+        position: relative;
+        bottom: 55px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .icons-container {
+        width: 90%;
     }
 }
